SleepCycleFragment is now accessible within the app. Buttons on this Fragment do cause the app to crash though.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,19 +10,27 @@
         android:name="com.example.newbornnaptracker.FirstFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
-
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
+        <action
+            android:id="@+id/action_FirstFragment_to_SleepCycleFragment"
+            app:destination="@id/SleepCycleFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/SecondFragment"
         android:name="com.example.newbornnaptracker.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
-
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/SleepCycleFragment"
+        android:name="com.example.newbornnaptracker.SleepCycleFragment"
+        android:label="Sleep Cycle"
+        tools:layout="@layout/fragment_sleep_cycle" />
 </navigation>
