--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -32,6 +32,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_first" />
 
+        <Button
+            android:id="@+id/button_sleep_cycle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:text="Sleep Cycle"
+            app:layout_constraintEnd_toStartOf="@id/button_first"
+            app:layout_constraintTop_toTopOf="@id/button_first"
+            tools:layout_editor_absoluteY="-1dp" />
+
         <!--        <WebView-->
         <!--            android:id="@+id/webView"-->
         <!--            android:layout_width="match_parent"-->
