--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -42,6 +42,16 @@
             app:layout_constraintTop_toTopOf="@id/button_first"
             tools:layout_editor_absoluteY="-1dp" />
 
+<!--        <com.google.android.gms.common.SignInButton-->
+<!--            android:id="@+id/sign_in_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:layout_marginStart="16dp"-->
+<!--            app:layout_constraintStart_toEndOf="@id/button_first"-->
+<!--            app:layout_constraintTop_toTopOf="@id/button_first" />-->
+
+
         <!--        <WebView-->
         <!--            android:id="@+id/webView"-->
         <!--            android:layout_width="match_parent"-->
