--- a/app/src/main/res/layout/fragment_sleep_cycle.xml
+++ b/app/src/main/res/layout/fragment_sleep_cycle.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,32 +8,57 @@
     android:padding="16dp"
     tools:context=".SleepCycleFragment">
 
-    <Button
-        android:id="@+id/addSleepButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Sleep Time" />
-
-    <Button
-        android:id="@+id/addWakeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Wake Time" />
-
-    <TextView
-        android:id="@+id/estimatesTextView"
+    <EditText
+        android:id="@+id/sleepTimeInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Estimates:"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:hint="Enter last sleep time (e.g., 3:30pm)"
+        android:inputType="text" />
+
+    <Button
+        android:id="@+id/trackSleepButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Track Sleep" />
 
     <TextView
-        android:id="@+id/predictionsTextView"
-        android:layout_width="match_parent"
+        android:id="@+id/resultTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Predictions:"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="16dp"
+        android:textSize="18sp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/sleepcycle" />
+
+    <!--    <Button-->
+<!--        android:id="@+id/addSleepButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Add Sleep Time" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/addWakeButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Add Wake Time" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/estimatesTextView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Estimates:"-->
+<!--        android:textSize="18sp"-->
+<!--        android:textStyle="bold" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/predictionsTextView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Predictions:"-->
+<!--        android:textSize="18sp"-->
+<!--        android:textStyle="bold" />-->
 
 </LinearLayout>
