--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,22 +28,20 @@
         android:layout_gravity="bottom"
         app:srcCompat="@drawable/spotifywidget" />
 
-    <Button
-        android:id="@+id/toggleImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:text="@string/hide_image"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp" />
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fab"-->
+<!--    <Button-->
+<!--        android:id="@+id/toggleImageButton"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="bottom|end"-->
-<!--        android:layout_marginEnd="@dimen/fab_margin"-->
-<!--        android:layout_marginBottom="16dp"-->
-<!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
+<!--        android:layout_gravity="bottom|center"-->
+<!--        android:text="@string/hide_image"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="16dp" />-->
+
+    <Button
+        android:id="@+id/open_music_player_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/open_music_player" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
