WIP MusicService class has been added to attempt to keep music playing, even in the background.

--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -40,4 +40,13 @@
         app:layout_constraintTop_toBottomOf="@id/pause_button"
         android:layout_gravity="bottom" />
 
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/exit"
+        app:layout_constraintTop_toBottomOf="@id/stop_button"
+        android:layout_gravity="bottom" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
