Google Calendar API is mostly working, but currently still has a bug that crashes when signing in.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,16 +26,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:contentDescription="@string/music_player"
         app:srcCompat="@drawable/spotifywidget" />
 
-<!--    <Button-->
-<!--        android:id="@+id/toggleImageButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="bottom|center"-->
-<!--        android:text="@string/hide_image"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginTop="16dp" />-->
+    <Button
+        android:id="@+id/open_google_calendar_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/open_google_calendar"
+        app:layout_constraintBottom_toTopOf="@id/imageView"
+        app:layout_anchorGravity="right"/>
+
 
     <Button
         android:id="@+id/open_music_player_button"
