--- a/app/src/main/res/layout/fragment_sleep_cycle.xml
+++ b/app/src/main/res/layout/fragment_sleep_cycle.xml
@@ -12,14 +12,15 @@
         android:id="@+id/sleepTimeInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter last sleep time (e.g., 3:30pm)"
+        android:autofillHints=""
+        android:hint="@string/enter_last_sleep_time_e_g_3_30pm"
         android:inputType="text" />
 
     <Button
         android:id="@+id/trackSleepButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Track Sleep" />
+        android:text="@string/track_sleep" />
 
     <TextView
         android:id="@+id/resultTextView"
@@ -31,34 +32,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/sleep_cycle"
         app:srcCompat="@drawable/sleepcycle" />
-
-    <!--    <Button-->
-<!--        android:id="@+id/addSleepButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Add Sleep Time" />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/addWakeButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Add Wake Time" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/estimatesTextView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Estimates:"-->
-<!--        android:textSize="18sp"-->
-<!--        android:textStyle="bold" />-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/predictionsTextView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Predictions:"-->
-<!--        android:textSize="18sp"-->
-<!--        android:textStyle="bold" />-->
 
 </LinearLayout>
