--- a/app/src/main/res/layout/fragment_sleep_cycle.xml
+++ b/app/src/main/res/layout/fragment_sleep_cycle.xml
@@ -8,20 +8,30 @@
     android:padding="16dp"
     tools:context=".SleepCycleFragment">
 
-    <Spinner
-        android:id="@+id/hour_spinner"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
 
-    <Spinner
-        android:id="@+id/minute_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <NumberPicker
+            android:id="@+id/hour_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp" />
 
-    <Spinner
-        android:id="@+id/am_pm_spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <NumberPicker
+            android:id="@+id/minute_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp" />
+
+        <NumberPicker
+            android:id="@+id/am_pm_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp" />
+    </LinearLayout>
 
 <!--    <EditText-->
 <!--        android:id="@+id/sleepTimeInput"-->
