--- a/app/src/main/res/layout/fragment_sleep_cycle.xml
+++ b/app/src/main/res/layout/fragment_sleep_cycle.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    android:gravity="top|center_horizontal"
     tools:context=".SleepCycleFragment">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sleep_cycle_question"
+        android:textSize="18sp"
+        android:layout_marginBottom="16dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -33,19 +40,12 @@
             android:layout_margin="8dp" />
     </LinearLayout>
 
-<!--    <EditText-->
-<!--        android:id="@+id/sleepTimeInput"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:autofillHints=""-->
-<!--        android:hint="@string/enter_last_sleep_time_e_g_3_30pm"-->
-<!--        android:inputType="text" />-->
-
     <Button
         android:id="@+id/trackSleepButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/track_sleep" />
+        android:text="@string/track_sleep"
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:id="@+id/resultTextView"
@@ -53,11 +53,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textSize="18sp" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/sleep_cycle"
-        app:srcCompat="@drawable/sleepcycle" />
 
 </LinearLayout>
