--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,13 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:contentDescription="@string/music_player"
-        app:srcCompat="@drawable/spotifywidget" />
-
-    <Button
-        android:id="@+id/open_music_player_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:text="@string/open_music_player" />
+        app:srcCompat="@drawable/lullaby" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
