Added Snackbar to AddNapFragment to help communicate the Fragment's purpose.

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@id/HomeFragment"
+        android:icon="@drawable/ic_home"
+        android:title="@string/home" />
+    <item
         android:id="@id/SleepCycleFragment"
         android:icon="@drawable/ic_sleep_cycle"
         android:title="@string/sleep_cycle" />
