--- a/app/src/main/res/layout/fragment_music_player.xml
+++ b/app/src/main/res/layout/fragment_music_player.xml
@@ -1,41 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".MusicPlayerFragment">
+    android:background="@android:color/black"
+    android:padding="16dp">
 
-    <Spinner
-        android:id="@+id/sound_spinner"
+    <TextView
+        android:id="@+id/album_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/album_title"
+        android:text="@string/album"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+    <ImageView
+        android:id="@+id/album_art"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_below="@id/album_title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:background="@color/black"
+        android:contentDescription="@string/album_art" />
+
+    <TextView
+        android:id="@+id/song_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/song_name"
+        android:textColor="@android:color/white"
+        android:textSize="22sp"
+        android:layout_below="@id/album_art"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+    <TextView
+        android:id="@+id/artist_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/artist_name"
+        android:textColor="@android:color/white"
+        android:layout_below="@id/song_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp" />
+
+    <SeekBar
+        android:id="@+id/seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/sound_list"
-        android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@id/play_button"
-        tools:layout_editor_absoluteX="16dp" />
+        android:layout_below="@id/artist_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
 
-    <Button
-        android:id="@+id/play_button"
+    <TextView
+        android:id="@+id/current_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/play" />
-
-    <Button
-        android:id="@+id/pause_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pause"
+        android:text="@string/_0_00"
+        android:textColor="@android:color/white"
+        android:layout_below="@id/seek_bar"
+        android:layout_alignParentStart="true"
         android:layout_marginTop="8dp" />
 
-    <Button
-        android:id="@+id/stop_button"
+    <TextView
+        android:id="@+id/total_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stop"
+        android:text="@string/_0_00"
+        android:textColor="@android:color/white"
+        android:layout_below="@id/seek_bar"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_below="@id/current_time"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp">
 
-</LinearLayout>
+        <ImageButton
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_previous"
+            android:contentDescription="@string/previous"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_marginEnd="24dp"
+            app:tint="@android:color/white" />
+
+        <ImageButton
+            android:id="@+id/play_pause_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_play"
+            android:contentDescription="@string/play"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_marginEnd="24dp"
+            app:tint="@android:color/white" />
+
+        <ImageButton
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_next"
+            android:contentDescription="@string/next"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            app:tint="@android:color/white" />
+
+    </LinearLayout>
+
+</RelativeLayout>
