--- a/app/src/main/res/layout/fragment_sleep_cycle.xml
+++ b/app/src/main/res/layout/fragment_sleep_cycle.xml
@@ -40,6 +40,13 @@
             android:layout_margin="8dp" />
     </LinearLayout>
 
+    <RadioGroup
+        android:id="@+id/babyRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="16dp" />
+
     <Button
         android:id="@+id/trackSleepButton"
         android:layout_width="wrap_content"
