--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,4 +34,10 @@
         android:name="com.example.newbornnaptracker.SongListFragment"
         android:label="@string/song_list_fragment_label"
         tools:layout="@layout/fragment_song_list" />
+
+    <fragment
+        android:id="@+id/SettingsFragment"
+        android:name="com.example.newbornnaptracker.SettingsFragment"
+        android:label="Settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
