--- a/app/src/main/res/layout/fragment_sleep_cycle.xml
+++ b/app/src/main/res/layout/fragment_sleep_cycle.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,6 +14,13 @@
         android:layout_height="wrap_content"
         android:text="@string/sleep_cycle_question"
         android:textSize="18sp"
+        android:layout_marginBottom="16dp" />
+
+    <RadioGroup
+        android:id="@+id/babyRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_marginBottom="16dp" />
 
     <LinearLayout
@@ -40,19 +48,28 @@
             android:layout_margin="8dp" />
     </LinearLayout>
 
-    <RadioGroup
-        android:id="@+id/babyRadioGroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="16dp" />
-
     <Button
         android:id="@+id/trackSleepButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/track_sleep"
         android:layout_marginTop="16dp" />
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/addToCalendarChip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_to_calendar"
+        app:chipIcon="@drawable/ic_calendar"
+        app:chipStyle="@style/Widget.MaterialComponents.Chip.Action.WhiteBackground"
+        android:layout_marginTop="16dp" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/napChipGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal" />
 
     <TextView
         android:id="@+id/resultTextView"
