--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:gravity="center"
+            android:transitionName="shared_title"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/textviewFirst"
             app:layout_constraintStart_toStartOf="parent"
