--- a/app/src/main/res/layout/fragment_sound_machine.xml
+++ b/app/src/main/res/layout/fragment_sound_machine.xml
@@ -27,10 +27,10 @@
         android:contentDescription="@string/album_art" />
 
     <TextView
-        android:id="@+id/song_name"
+        android:id="@+id/sound_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/song_name"
+        android:text="@string/sound_name"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         android:layout_below="@id/album_art"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:text="@string/artist_name"
         android:textColor="@android:color/white"
-        android:layout_below="@id/song_name"
+        android:layout_below="@id/sound_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp" />
 
