--- a/app/src/main/res/layout/sound_machine_controls.xml
+++ b/app/src/main/res/layout/sound_machine_controls.xml
@@ -17,10 +17,10 @@
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
-        android:id="@+id/song_name_mini"
+        android:id="@+id/sound_name_mini"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/song_name"
+        android:text="@string/sound_name"
         android:textColor="@android:color/white"
         app:layout_constraintStart_toEndOf="@id/album_art_mini"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,7 +36,7 @@
         android:text="@string/artist_name"
         android:textColor="@android:color/white"
         app:layout_constraintStart_toEndOf="@id/album_art_mini"
-        app:layout_constraintTop_toBottomOf="@id/song_name_mini"
+        app:layout_constraintTop_toBottomOf="@id/sound_name_mini"
         app:layout_constraintEnd_toStartOf="@id/play_pause_button_mini"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         android:layout_marginStart="16dp"
